--- a/vtr-ui/src/styles.scss
+++ b/vtr-ui/src/styles.scss
@@ -2566,23 +2566,4 @@ ngb-tooltip-window.schedule-scan.tooltip {
 	background: rgba(0, 0, 0, 0.32);
 }
 
-.cdk-overlay-container {
-	z-index: 99;
 
-	.cdk-overlay-pane {
-		height: auto;
-	}
-}
-
-.hcm-fill {
-	@include high-contrast-fill;
-}
-.hcm-fill-reverse {
-	@include high-contrast-fill-reverse;
-}
-.hcm-stroke {
-	@include high-contrast-stroke;
-}
-.hcm-stroke-reverse {
-	@include high-contrast-stroke-reverse;
-}
